--- a/background.html
+++ b/background.html
@@ -3,7 +3,7 @@
 <head>
   <title>Bookmark</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <script type="text/javascript" src="sb.js"></script>
+  <script type="text/javascript" src="sbookmark.js"></script>
   <script type="text/javascript" src="background.js"></script>
 </head>
 <body>
