--- a/popover.html
+++ b/popover.html
@@ -4,7 +4,7 @@
     <title>Bookmark</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="sb.js"></script>
+    <script type="text/javascript" src="sbookmark.js"></script>
     <link rel="stylesheet" type="text/css" media="all" href="default.css" />
     <link rel="stylesheet" type="text/css" media="all" href="style.css" />
   </head>
